--- a/recyclerviewdemo/src/main/AndroidManifest.xml
+++ b/recyclerviewdemo/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".RecyclerViewActivity" />
+        <activity android:name=".CardViewActivity"></activity>
     </application>
 
 </manifest>
